@@ -10,3 +10,4 @@
 * Documented semantics of locales
 * Unicode case-insensitive string compare
 * Some platform- and locale-independent conversion of numbers from/to strings
+* Warnings
