@@ -1,3 +1,7 @@
+2006-06-18  Ales Hakl  <ales at hakl dot net>
+
+	* dfsch/*.h: Added documentation comments
+
 2006-06-11  Ales Hakl  <ales at hakl dot net>
 
 	* dfsch/dfsch.h: Added documentation comments to argument macros
